--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "axios": "^1.1.2",
+    "axios": "^1.4.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-telegram-webapp": "^0.1.5",
     "react-tradingview-embed": "^3.0.6",
@@ -34,11 +36,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.27",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.3"
   },
   "eslintConfig": {
     "extends": [
