feat(WAD-28): подключение сокетов и api

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=8800
 
-REACT_APP_WS_URI=wss://games.1if.tech
+REACT_APP_WS_URI=wss://stageaviator.click
 REACT_APP_API_URL=https://stageaviator.click/api
